# e2e-test-20260222-152700

./: pyproject.toml
.research/: research_history.json
.research/results/: stdout.txt
.research/results/comparative-0-long/: metrics.json
.research/results/comparative-0-strict/: metrics.json
.research/results/comparison/: aggregated_metrics.json
.research/results/proposed-long/: metrics.json
.research/results/proposed-strict/: metrics.json
config/: config.yaml
config/run/: comparative-0-long.yaml  comparative-0-strict.yaml  proposed-long.yaml  proposed-strict.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py
